# nis1336-schedule

./: README.md
backend/: .gitignore  Cargo.toml
backend/schedule_core/: Cargo.toml
backend/schedule_core/src/: db.rs  error.rs  filter.rs  lib.rs  task.rs  user.rs
backend/src/: lib.rs
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: auth.css  auth.jsx  backend.js  design.jsx  list.css  list.jsx  main.css  main.jsx  notice.jsx  task.css  task.jsx
