[package]
name = "nis1336-schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
tokio = {version = "1", features = ["full"]}
axum = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "cli"
path = "bin/cli.rs"
