[package]
name = "nis1336-schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
nis1336-schedule-core = {path = "schedule_core"}
axum = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
crossbeam-skiplist = "0.1"
tokio = {version = "1", features = ["full"]}
cookie = {version = "0.18", features = ["percent-encode"]}
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "server"
path = "bin/server.rs"

[workspace]
members = ["schedule_core",]